--- a/Recommendations_with_IBM.html
+++ b/Recommendations_with_IBM.html
@@ -14841,7 +14841,9 @@ The top 10 recommendations for user 20 are the following article names:
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Provide your response here.</strong></p>
+<p><strong>Provide your response here.</strong>
+You can use the get_top_article_ids function to give new users the most popular articles, which in turn can be complemented by using some categories that help segment them, such as the country from which they connect, age, if they are male or female, etc.
+Or use a search engine to use a knowledge model according to the words they enter (name of movies, actors, type of movies, etc.)</p>
 
 </div>
 </div>
